chore(Task): fix return new response for create checkpoint